day 3 solution completed

--- a/notebooks/D03.ipynb
+++ b/notebooks/D03.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
        "       [1, 0, 0, ..., 1, 1, 1]])"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -56,15 +56,7 @@
     "def power_consumption(diagnostic):\n",
     "    gamma = convert_string_to_int(np.multiply(np.mean(diagnostic, axis=0)>=0.5,1))\n",
     "    epsilon = convert_string_to_int(np.multiply(np.mean(diagnostic, axis=0)<0.5,1))\n",
-    "    return gamma*epsilon\n",
-    "\n",
-    "def life_support_rating(diagnostic):\n",
-    "    data = diagnostic.copy()\n",
-    "    while len(data)>1:\n",
-    "        pass\n",
-    "    oxygen = convert_string_to_int(data)\n",
-    "    co2 = convert_string_to_int(data)\n",
-    "    return oxygen*co2"
+    "    return gamma*epsilon"
    ]
   },
   {
@@ -87,9 +79,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "def life_support_rating(diagnostic):\n",
+    "    o2 = diagnostic.copy()\n",
+    "    co2 = diagnostic.copy()\n",
+    "    for i in range(diagnostic.shape[1]):\n",
+    "        major = 1 if np.mean(o2[:, i])>=0.5 else 0\n",
+    "        o2 = o2[o2[:, i] == major]\n",
+    "        if o2.shape[0] == 1: break;\n",
+    "    for i in range(diagnostic.shape[1]):\n",
+    "        minor = 0 if np.mean(co2[:, i])>=0.5 else 1\n",
+    "        co2 = co2[co2[:, i] == minor]\n",
+    "        if co2.shape[0] == 1: break;\n",
+    "    oxygen = convert_string_to_int(o2[0])\n",
+    "    carbon = convert_string_to_int(co2[0])\n",
+    "    return oxygen*carbon"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What is the life support rating of the submarine? - 1800151\n"
+     ]
+    }
+   ],
    "source": [
     "a2 = life_support_rating(diagnostic)\n",
     "print(f'What is the life support rating of the submarine? - {a2}')"
