--- a/notebooks/D04.ipynb
+++ b/notebooks/D04.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[Day 4: Giant Squid](https://adventofcode.com/2021/day/4)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
