--- a/notebooks/D09.ipynb
+++ b/notebooks/D09.ipynb
@@ -9,17 +9,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from scipy.signal import convolve2d"
+    "from scipy.signal import convolve2d\n",
+    "from scipy.ndimage import label\n",
+    "from math import prod"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,6 +59,27 @@
    ],
    "source": [
     "get_low_points(smoke_map)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1059300"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "labels, num_features = label((9-smoke_map)>0)\n",
+    "prod(sorted([np.sum(labels==i) for i in range(1, num_features+1)])[-3:])"
    ]
   },
   {
