updated day14 solution

--- a/notebooks/D14.ipynb
+++ b/notebooks/D14.ipynb
@@ -26,7 +26,7 @@
     "with open('../input/D14.txt', 'r') as f:\n",
     "    polymer = [x for x in f.readlines()]\n",
     "polymer_template, insertions = ''.join(polymer).split('\\n\\n')\n",
-    "rules = {a: b for a, b in [x.split(\" -> \") for x in insertions.strip().split('\\n')]}\n",
+    "rules = {a: [a[0]+b, b+a[1]] for a, b in [x.split(\" -> \") for x in insertions.strip().split('\\n')]}\n",
     "pairs = Counter([polymer_template[i : i + 2] for i in range(len(polymer_template) - 1)])"
    ]
   },
@@ -36,18 +36,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def new_polymer_counter(pairs, rules, steps=10):\n",
+    "def new_polymer(pairs, rules, steps=10):\n",
     "    for _ in range(steps):\n",
     "        new_pairs = Counter()\n",
-    "        for p, v in pairs.items():\n",
-    "            if p in rules:\n",
-    "                c = rules[p]\n",
-    "                new_pairs[p[0] + c] += v\n",
-    "                new_pairs[c + p[1]] += v\n",
-    "            else:\n",
-    "                new_pairs[p] += pairs[p]\n",
+    "        for k, v in pairs.items():\n",
+    "            if k in rules:\n",
+    "                c1, c2 = rules[k]\n",
+    "                new_pairs[c1] += v\n",
+    "                new_pairs[c2] += v\n",
     "        pairs = new_pairs\n",
-    "    return pairs"
+    "    return new_pairs\n",
+    "\n",
+    "def new_polymer_counter(pairs, rules, steps=10):\n",
+    "    new_pairs = new_polymer(pairs, rules, steps=steps)\n",
+    "    count = Counter()\n",
+    "    for p, v in new_pairs.items():\n",
+    "        count[p[0]] += v\n",
+    "    count[polymer_template[-1]] += 1\n",
+    "    return count.most_common()[0][1] - count.most_common()[-1][1]"
    ]
   },
   {
@@ -56,21 +62,18 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3306\n"
-     ]
+     "data": {
+      "text/plain": [
+       "3306"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "new_pairs = new_polymer_counter(pairs.copy(), rules, steps=10)\n",
-    "count = Counter()\n",
-    "for p, v in new_pairs.items():\n",
-    "    count[p[0]] += v\n",
-    "count[polymer_template[-1]] += 1\n",
-    "\n",
-    "print(count.most_common()[0][1] - count.most_common()[-1][1])"
+    "new_polymer_counter(pairs.copy(), rules, steps=10)\n"
    ]
   },
   {
@@ -79,29 +82,19 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3760312702877\n"
-     ]
+     "data": {
+      "text/plain": [
+       "3760312702877"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "new_pairs = new_polymer_counter(pairs.copy(), rules, steps=40)\n",
-    "count = Counter()\n",
-    "for p, v in new_pairs.items():\n",
-    "    count[p[0]] += v\n",
-    "count[polymer_template[-1]] += 1\n",
-    "\n",
-    "print(count.most_common()[0][1] - count.most_common()[-1][1])"
+    "new_polymer_counter(pairs.copy(), rules, steps=40)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
