--- a/notebooks/D01.ipynb
+++ b/notebooks/D01.ipynb
@@ -9,69 +9,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "data = open('../input/D01.txt', 'r', encoding='utf-8').read().splitlines()\n",
+    "depths = [int(x) for x in data]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open('../input/D01.txt', 'r') as f:\n",
-    "    depths = [int(d) for d in f.readlines()]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def compare_depths(depths, window=1):\n",
-    "    data = np.convolve(depths, np.ones(window, dtype=int), 'valid')\n",
-    "    return sum(data[:-1]<np.maximum(data[:-1],data[1:]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "the number of times a depth measurement increases: 1393\n"
-     ]
+     "data": {
+      "text/plain": [
+       "1393"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "a1 = compare_depths(depths, 1)\n",
-    "print(f'the number of times a depth measurement increases: {a1}')"
+    "sum(x < y for x, y in zip(depths, depths[1:]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "the number of times the sum of measurements in this sliding window increases: 1359\n"
-     ]
+     "data": {
+      "text/plain": [
+       "1359"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "a2 = compare_depths(depths, 3)\n",
-    "print(f'the number of times the sum of measurements in this sliding window increases: {a2}')"
+    "sum(x < y for x, y in zip(depths, depths[3:]))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
