--- a/notebooks/D09.ipynb
+++ b/notebooks/D09.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,6 +27,50 @@
    "source": [
     "with open('../input/D09.txt', 'r') as f:\n",
     "    smoke_map = np.array([[int(y) for y in x.strip()] for x in f.readlines()])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = open('../input/D09.txt', 'r', encoding='utf-8').read()\n",
+    "df = np.array([list(map(int, [c for c in line])) for line in data.splitlines()])\n",
+    "pad = np.pad(df, ((1, 1), (1, 1)), \"constant\", constant_values=10)\n",
+    "mask = (\n",
+    "    (df < pad[1:-1, 0:-2]).astype(int)  # left\n",
+    "    + (df < pad[1:-1, 2:]).astype(int)  # right\n",
+    "    + (df < pad[0:-2, 1:-1]).astype(int)  # top\n",
+    "    + (df < pad[2:, 1:-1]).astype(int)  # bottom\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "486"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(df + 1)[mask == 4].sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### using Scipy Convolution Matrix"
    ]
   },
   {
