--- a/notebooks/D12.ipynb
+++ b/notebooks/D12.ipynb
@@ -149,7 +149,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('AOC-f0fObxNH')",
+   "display_name": "Python 3.8.3 ('04._ML_Utils--A1wxRDZ')",
    "language": "python",
    "name": "python3"
   },
@@ -163,12 +163,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.8.3"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "4d2e615df860dbb8dab799da6c49ca2875c6babc41706b5923d6502e2954ccfd"
+    "hash": "57693568fa95845605be3da01a234f4a467a6c93ef13b9c34187abb07900ecfa"
    }
   }
  },
